# PMT

./: .gitignore  README.md
avances/: siguentes-pasos.md
presentaciones/: veamer.tex
proyecto-tesis/: main.tex  references.bib
src/MonteCarlo/: Project.toml  cromo-cloro-MC-2.ipynb  cromo-cloro-builder-2.ipynb  distributed.jl  main.jl  modelo-Ising.ipynb  plots.jl  run_distributed.jl  run_distributed.sh  setup_distributed.jl  setup_distributed.sh  structure.jl
src/MonteCarlo/src/: data.jl  mc_hamiltonian.jl  mc_neighbors.jl  mc_params.jl  mc_plots.jl  mc_sim.jl  mc_spins.jl  mc_structure.jl  mc_vectors.jl  metropolis.jl  mstructure.jl  neighbors.jl  params.jl  spins.jl  vectors.jl
src/SkyrmionClassifier/: HvsJ_cnn_inference.ipynb  HvsJ_vit_full.ipynb  HvsJ_vit_inference.ipynb  cnn.py  compare_inference.ipynb  pyproject.toml  train_cnn.ipynb  train_vit.ipynb  vit.py
src/SkyrmionClassifier/classes/: id2label_vit.json  label2id_vit.json
